White Space - Fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -58,7 +58,7 @@ h1 {
 
 .stageThree {
     color: $text-color;
-    font-size: 1.2rem;
+    font-size: 1rem;
     height: 3vh;
     background-color:$info-color;
     display: flex;
@@ -67,7 +67,7 @@ h1 {
 
 }
 a {
-    font-size: 1.75rem;
+    font-size: 1.19rem;//1.75rem;
     text-transform: uppercase;
     text-decoration: none;
     color: $btn-color;
